--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <input type="text" id="dateRangeInput" placeholder="Select Date Range" style="width: 250px; padding: 7px;" readonly/>
+    <!-- <div class="col-sm-6 col-lg-3 date-input-wrapper">
+        <label class="fs-12 mb-5 fw-normal">Date Range</label>
+        <input type="text" id="dateRangeInput" placeholder="Select date range" class="input-control fs-13">
+        <i class="fa fa-calendar-alt calendar-icon"></i>
+    </div> -->
 
     <!-- Optional hidden input fields dateFrom or dateTo, if you want the store value in dateFrom and dateTo inputs -->
     <input type="hidden" id="dateFrom" readonly/>
